Chapters initial files added.

--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt, a4paper]{book}
+\documentclass[12pt]{book}
 \usepackage{amsmath}
 
 \usepackage{geometry}
@@ -13,5 +13,23 @@
 \begin{document}
 \include{chapters/0_cover/cover.tex}
 \loadgeometry{origin}
+\include{chapters/0_acknowls/acknowls.tex}
 \include{chapters/0_abstract/abstract.tex}
+
+\tableofcontents
+
+\include{chapters/1_introduction/introduction.tex}
+
+\include{chapters/2_background/background.tex}
+
+\include{chapters/3_related_work/related_work.tex}
+
+\include{chapters/4_methods/methods.tex}
+
+\include{chapters/5_results/results.tex}
+
+\include{chapters/6_discussion/discussion.tex}
+
+\include{chapters/7_conclusion/conclusion.tex}
+
 \end{document}
