--- a/main.tex
+++ b/main.tex
@@ -1,35 +1,63 @@
 \documentclass[12pt]{book}
-\usepackage{amsmath}
+\usepackage[a4paper,
+            bindingoffset=0.2in,
+            left=1in,
+            right=1in,
+            top=1in,
+            bottom=1.2in,
+            footskip=.5in]{geometry}
 
-\usepackage{geometry}
+
+\usepackage{lipsum}
+\usepackage{afterpage}
+
+\newcommand\blankpage{%
+    \null
+    \thispagestyle{empty}%
+    \newpage}
+
+\usepackage{fancyhdr}
+\pagestyle{fancy}
+\fancyhf{}
+\fancyhead[EL]{\nouppercase\leftmark}
+\fancyhead[OR]{\nouppercase\rightmark}
+\fancyhead[ER,OL]{\thepage}
+\setlength{\headheight}{15pt}% ...at least 51.60004pt
+
+\geometry{
+    hmargin={1in, 1in},
+    vmargin={1in, 1in}
+} 
+\setlength{\headsep}{0.3in}
 \savegeometry{origin}
-\geometry{rmargin=2cm,lmargin=2cm,vmargin={5cm, 2cm}}% for the title page
 
-\usepackage{svg}
-\usepackage{graphicx}
-\graphicspath{{./images/}}
+\geometry{
+    hmargin={2cm, 2cm},
+    vmargin={5cm, 2cm}
+} \savegeometry{coverpage}
 
 
 \begin{document}
+\pagenumbering{roman}
+\loadgeometry{coverpage}
 \include{chapters/0_cover/cover.tex}
 \loadgeometry{origin}
 \include{chapters/0_acknowls/acknowls.tex}
 \include{chapters/0_abstract/abstract.tex}
-
 \tableofcontents
-
+\listoffigures
 \include{chapters/1_introduction/introduction.tex}
 
-\include{chapters/2_background/background.tex}
+% \include{chapters/2_background/background.tex}
 
-\include{chapters/3_related_work/related_work.tex}
+% \include{chapters/3_related_work/related_work.tex}
 
-\include{chapters/4_methods/methods.tex}
+% \include{chapters/4_methods/methods.tex}
 
-\include{chapters/5_results/results.tex}
+% \include{chapters/5_results/results.tex}
 
-\include{chapters/6_discussion/discussion.tex}
+% \include{chapters/6_discussion/discussion.tex}
 
-\include{chapters/7_conclusion/conclusion.tex}
+% \include{chapters/7_conclusion/conclusion.tex}
 
 \end{document}
