Updated code on Image classification (Related Work)

--- a/bibliography/bibliography.bib
+++ b/bibliography/bibliography.bib
@@ -4,3 +4,188 @@
     year={2015},
     Journal={Journal of unreproducible Results},    
 }
+
+@misc{coco,
+      title={Microsoft COCO: Common Objects in Context}, 
+      author={Tsung-Yi Lin and Michael Maire and Serge Belongie and Lubomir Bourdev and Ross Girshick and James Hays and Pietro Perona and Deva Ramanan and C. Lawrence Zitnick and Piotr Dollár},
+      year={2015},
+      eprint={1405.0312},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
+
+@article{kitti,
+author = {A Geiger and P Lenz and C Stiller and R Urtasun},
+title ={Vision meets robotics: The KITTI dataset},
+
+journal = {The International Journal of Robotics Research},
+volume = {32},
+number = {11},
+pages = {1231-1237},
+year = {2013},
+doi = {10.1177/0278364913491297},
+
+URL = { 
+    
+        https://doi.org/10.1177/0278364913491297
+    
+    
+
+},
+eprint = { 
+    
+        https://doi.org/10.1177/0278364913491297
+    
+    
+
+}
+,
+    abstract = { We present a novel dataset captured from a VW station wagon for use in mobile robotics and autonomous driving research. In total, we recorded 6 hours of traffic scenarios at 10–100 Hz using a variety of sensor modalities such as high-resolution color and grayscale stereo cameras, a Velodyne 3D laser scanner and a high-precision GPS/IMU inertial navigation system. The scenarios are diverse, capturing real-world traffic situations, and range from freeways over rural areas to inner-city scenes with many static and dynamic objects. Our data is calibrated, synchronized and timestamped, and we provide the rectified and raw image sequences. Our dataset also contains object labels in the form of 3D tracklets, and we provide online benchmarks for stereo, optical flow, object detection and other tasks. This paper describes our recording platform, the data format and the utilities that we provide. }
+}
+
+@misc{bdd100k,
+      title={BDD100K: A Diverse Driving Dataset for Heterogeneous Multitask Learning}, 
+      author={Fisher Yu and Haofeng Chen and Xin Wang and Wenqi Xian and Yingying Chen and Fangchen Liu and Vashisht Madhavan and Trevor Darrell},
+      year={2020},
+      eprint={1805.04687},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
+
+@misc{waymo,
+      title={Scalability in Perception for Autonomous Driving: Waymo Open Dataset}, 
+      author={Pei Sun and Henrik Kretzschmar and Xerxes Dotiwalla and Aurelien Chouard and Vijaysai Patnaik and Paul Tsui and James Guo and Yin Zhou and Yuning Chai and Benjamin Caine and Vijay Vasudevan and Wei Han and Jiquan Ngiam and Hang Zhao and Aleksei Timofeev and Scott Ettinger and Maxim Krivokon and Amy Gao and Aditya Joshi and Sheng Zhao and Shuyang Cheng and Yu Zhang and Jonathon Shlens and Zhifeng Chen and Dragomir Anguelov},
+      year={2020},
+      eprint={1912.04838},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
+
+@misc{nuscenes,
+      title={nuScenes: A multimodal dataset for autonomous driving}, 
+      author={Holger Caesar and Varun Bankiti and Alex H. Lang and Sourabh Vora and Venice Erin Liong and Qiang Xu and Anush Krishnan and Yu Pan and Giancarlo Baldan and Oscar Beijbom},
+      year={2020},
+      eprint={1903.11027},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}
+
+@misc{uricar2019challenges,
+      title={Challenges in Designing Datasets and Validation for Autonomous Driving}, 
+      author={Michal Uricar and David Hurych and Pavel Krizek and Senthil Yogamani},
+      year={2019},
+      eprint={1901.09270},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
+
+@misc{retinatrack,
+      title={RetinaTrack: Online Single Stage Joint Detection and Tracking}, 
+      author={Zhichao Lu and Vivek Rathod and Ronny Votel and Jonathan Huang},
+      year={2020},
+      eprint={2003.13870},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
+
+@misc{transtrack,
+      title={TransTrack: Multiple Object Tracking with Transformer}, 
+      author={Peize Sun and Jinkun Cao and Yi Jiang and Rufeng Zhang and Enze Xie and Zehuan Yuan and Changhu Wang and Ping Luo},
+      year={2021},
+      eprint={2012.15460},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
+
+@misc{bytetrack,
+      title={ByteTrack: Multi-Object Tracking by Associating Every Detection Box}, 
+      author={Yifu Zhang and Peize Sun and Yi Jiang and Dongdong Yu and Fucheng Weng and Zehuan Yuan and Ping Luo and Wenyu Liu and Xinggang Wang},
+      year={2022},
+      eprint={2110.06864},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
+
+@inproceedings{alexnet,
+ author = {Krizhevsky, Alex and Sutskever, Ilya and Hinton, Geoffrey E},
+ booktitle = {Advances in Neural Information Processing Systems},
+ editor = {F. Pereira and C.J. Burges and L. Bottou and K.Q. Weinberger},
+ pages = {},
+ publisher = {Curran Associates, Inc.},
+ title = {ImageNet Classification with Deep Convolutional Neural Networks},
+ url = {https://proceedings.neurips.cc/paper_files/paper/2012/file/c399862d3b9d6b76c8436e924a68c45b-Paper.pdf},
+ volume = {25},
+ year = {2012}
+}
+
+@misc{vggnet,
+      title={Very Deep Convolutional Networks for Large-Scale Image Recognition}, 
+      author={Karen Simonyan and Andrew Zisserman},
+      year={2015},
+      eprint={1409.1556},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
+
+@misc{inception,
+      title={Going Deeper with Convolutions}, 
+      author={Christian Szegedy and Wei Liu and Yangqing Jia and Pierre Sermanet and Scott Reed and Dragomir Anguelov and Dumitru Erhan and Vincent Vanhoucke and Andrew Rabinovich},
+      year={2014},
+      eprint={1409.4842},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
+
+@misc{resnet,
+      title={Deep Residual Learning for Image Recognition}, 
+      author={Kaiming He and Xiangyu Zhang and Shaoqing Ren and Jian Sun},
+      year={2015},
+      eprint={1512.03385},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
+
+@misc{densenet,
+      title={Densely Connected Convolutional Networks}, 
+      author={Gao Huang and Zhuang Liu and Laurens van der Maaten and Kilian Q. Weinberger},
+      year={2018},
+      eprint={1608.06993},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
+
+@misc{efficientnet,
+      title={EfficientNet: Rethinking Model Scaling for Convolutional Neural Networks}, 
+      author={Mingxing Tan and Quoc V. Le},
+      year={2020},
+      eprint={1905.11946},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}
+
+@misc{vit,
+      title={An Image is Worth 16x16 Words: Transformers for Image Recognition at Scale}, 
+      author={Alexey Dosovitskiy and Lucas Beyer and Alexander Kolesnikov and Dirk Weissenborn and Xiaohua Zhai and Thomas Unterthiner and Mostafa Dehghani and Matthias Minderer and Georg Heigold and Sylvain Gelly and Jakob Uszkoreit and Neil Houlsby},
+      year={2021},
+      eprint={2010.11929},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
+
+@misc{imagenet,
+      title={ImageNet Large Scale Visual Recognition Challenge}, 
+      author={Olga Russakovsky and Jia Deng and Hao Su and Jonathan Krause and Sanjeev Satheesh and Sean Ma and Zhiheng Huang and Andrej Karpathy and Aditya Khosla and Michael Bernstein and Alexander C. Berg and Li Fei-Fei},
+      year={2015},
+      eprint={1409.0575},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
+
+@misc{densenet,
+      title={Densely Connected Convolutional Networks}, 
+      author={Gao Huang and Zhuang Liu and Laurens van der Maaten and Kilian Q. Weinberger},
+      year={2018},
+      eprint={1608.06993},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
