--- a/main.tex
+++ b/main.tex
@@ -40,6 +40,8 @@
 \addbibresource{bibliography/bibliography.bib}
 
 
+
+
 \begin{document}
 \pagenumbering{roman}
 \loadgeometry{coverpage}
@@ -51,9 +53,9 @@
 \listoffigures
 \include{chapters/1_introduction/introduction.tex}
 
-% \include{chapters/2_background/background.tex}
+\include{chapters/2_related_work/related_work.tex}
 
-% \include{chapters/3_related_work/related_work.tex}
+\include{chapters/3_background/background.tex}
 
 % \include{chapters/4_methods/methods.tex}
 
