Updated related_work with CNNs table.

--- a/bibliography/bibliography.bib
+++ b/bibliography/bibliography.bib
@@ -189,3 +189,76 @@ eprint = {
       archivePrefix={arXiv},
       primaryClass={cs.CV}
 }
+
+
+@article{rnn,
+title = {Serial order: a parallel distributed processing approach. Technical report, June 1985-March 1986},
+author = {Jordan, M I},
+abstractNote = {A theory of serial order is proposed that attempts to deal both with the classical problem of the temporal organization of internally generated action sequences as well as with certain of the parallel aspects of sequential behavior. The theory describes a dynamical system that is embodied as a parallel distributed processing or connectionist network. The trajectories of this dynamical system come to follow desired paths corresponding to particular action sequences as a result of a learning process during which constraints are imposed on the system. These constraints enforce sequentiality where necessary and, as they are relaxed, performance becomes more parallel. The theory is applied to the problem of coarticulation in speech production and simulation experiments are presented.},
+doi = {},
+url = {https://www.osti.gov/biblio/6910294},
+place = {United States},
+year = {1986},
+month = {5}
+}
+
+@article{lstm,
+    author = {Hochreiter, Sepp and Schmidhuber, Jürgen},
+    title = "{Long Short-Term Memory}",
+    journal = {Neural Computation},
+    volume = {9},
+    number = {8},
+    pages = {1735-1780},
+    year = {1997},
+    month = {11},
+    abstract = "{Learning to store information over extended time intervals by recurrent backpropagation takes a very long time, mostly because of insufficient, decaying error backflow. We briefly review Hochreiter's (1991) analysis of this problem, then address it by introducing a novel, efficient, gradient based method called long short-term memory (LSTM). Truncating the gradient where this does not do harm, LSTM can learn to bridge minimal time lags in excess of 1000 discrete-time steps by enforcing constant error flow through constant error carousels within special units. Multiplicative gate units learn to open and close access to the constant error flow. LSTM is local in space and time; its computational complexity per time step and weight is O. 1. Our experiments with artificial data involve local, distributed, real-valued, and noisy pattern representations. In comparisons with real-time recurrent learning, back propagation through time, recurrent cascade correlation, Elman nets, and neural sequence chunking, LSTM leads to many more successful runs, and learns much faster. LSTM also solves complex, artificial long-time-lag tasks that have never been solved by previous recurrent network algorithms.}",
+    issn = {0899-7667},
+    doi = {10.1162/neco.1997.9.8.1735},
+    url = {https://doi.org/10.1162/neco.1997.9.8.1735},
+    eprint = {https://direct.mit.edu/neco/article-pdf/9/8/1735/813796/neco.1997.9.8.1735.pdf},
+}
+
+@misc{gru,
+      title={Empirical Evaluation of Gated Recurrent Neural Networks on Sequence Modeling}, 
+      author={Junyoung Chung and Caglar Gulcehre and KyungHyun Cho and Yoshua Bengio},
+      year={2014},
+      eprint={1412.3555},
+      archivePrefix={arXiv},
+      primaryClass={cs.NE}
+}
+
+@misc{vivit,
+      title={ViViT: A Video Vision Transformer}, 
+      author={Anurag Arnab and Mostafa Dehghani and Georg Heigold and Chen Sun and Mario Lučić and Cordelia Schmid},
+      year={2021},
+      eprint={2103.15691},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
+
+@misc{vaswani2023attention,
+      title={Attention Is All You Need}, 
+      author={Ashish Vaswani and Noam Shazeer and Niki Parmar and Jakob Uszkoreit and Llion Jones and Aidan N. Gomez and Lukasz Kaiser and Illia Polosukhin},
+      year={2023},
+      eprint={1706.03762},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
+}
+
+
+﻿@Article{ssl_survey,
+author={van Engelen, Jesper E.
+and Hoos, Holger H.},
+title={A survey on semi-supervised learning},
+journal={Machine Learning},
+year={2020},
+month={Feb},
+day={01},
+volume={109},
+number={2},
+pages={373-440},
+issn={1573-0565},
+doi={10.1007/s10994-019-05855-6},
+url={https://doi.org/10.1007/s10994-019-05855-6}
+}
+
