--- a/bibliography/bibliography.bib
+++ b/bibliography/bibliography.bib
@@ -246,13 +246,13 @@ month = {5}
 }
 
 
-﻿@Article{ssl_survey,
+@Article{ssl_survey,
 author={van Engelen, Jesper E.
 and Hoos, Holger H.},
 title={A survey on semi-supervised learning},
 journal={Machine Learning},
 year={2020},
-month={Feb},
+month=Feb,
 day={01},
 volume={109},
 number={2},
