--- a/bibliography/bibliography.bib
+++ b/bibliography/bibliography.bib
@@ -262,3 +262,9 @@ doi={10.1007/s10994-019-05855-6},
 url={https://doi.org/10.1007/s10994-019-05855-6}
 }
 
+@book{chapelle2010semi,
+  title={Semi-supervised learning},
+  author={Chapelle, O. and Sch{\"o}lkopf, B. and Zien, A.},
+  year={2010},
+  publisher={MIT Press}
+}
