--- a/main.tex
+++ b/main.tex
@@ -10,6 +10,9 @@
 
 \usepackage{lipsum}
 \usepackage{afterpage}
+\usepackage{bm}
+\usepackage{graphicx}
+\usepackage[labelfont=bf]{caption}
 
 \newcommand\blankpage{%
     \null
@@ -38,6 +41,8 @@
 
 \usepackage{biblatex}
 \addbibresource{bibliography/bibliography.bib}
+
+\usepackage{amsmath}
 
 
 
