--- a/bibliography/bibliography.bib
+++ b/bibliography/bibliography.bib
@@ -268,3 +268,12 @@ url={https://doi.org/10.1007/s10994-019-05855-6}
   year={2010},
   publisher={MIT Press}
 }
+
+@misc{pham2021meta,
+      title={Meta Pseudo Labels}, 
+      author={Hieu Pham and Zihang Dai and Qizhe Xie and Minh-Thang Luong and Quoc V. Le},
+      year={2021},
+      eprint={2003.10580},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}
