--- a/main.tex
+++ b/main.tex
@@ -13,6 +13,9 @@
 \usepackage{bm}
 \usepackage{graphicx}
 \usepackage[labelfont=bf]{caption}
+\usepackage{amssymb}
+\usepackage{amsmath}
+\usepackage{amsfonts}
 
 \newcommand\blankpage{%
     \null
