--- a/main.tex
+++ b/main.tex
@@ -15,6 +15,7 @@
 \usepackage[labelfont=bf]{caption}
 \usepackage{amssymb}
 \usepackage{amsmath}
+\usepackage{svg}
 \usepackage{amsfonts}
 
 \newcommand\blankpage{%
