--- a/main.tex
+++ b/main.tex
@@ -59,7 +59,7 @@
 \include{chapters/0_acknowls/acknowls.tex}
 \include{chapters/0_abstract/abstract.tex}
 \tableofcontents
-\listoffigures
+% \listoffigures
 \include{chapters/1_introduction/introduction.tex}
 
 \include{chapters/2_related_work/related_work.tex}
