Moved methods to background. Reorganized experiments and methods sections.

--- a/bibliography/bibliography.bib
+++ b/bibliography/bibliography.bib
@@ -227,16 +227,6 @@ month = {5}
       primaryClass={cs.CV}
 }
 
-@misc{vaswani2023attention,
-      title={Attention Is All You Need}, 
-      author={Ashish Vaswani and Noam Shazeer and Niki Parmar and Jakob Uszkoreit and Llion Jones and Aidan N. Gomez and Lukasz Kaiser and Illia Polosukhin},
-      year={2023},
-      eprint={1706.03762},
-      archivePrefix={arXiv},
-      primaryClass={cs.CL}
-}
-
-
 @Article{ssl_survey,
 author={van Engelen, Jesper E.
 and Hoos, Holger H.},
@@ -288,4 +278,14 @@ url={https://doi.org/10.1007/s10994-019-05855-6}
   timestamp    = {Sat, 23 Jan 2021 01:20:40 +0100},
   biburl       = {https://dblp.org/rec/journals/corr/VaswaniSPUJGKP17.bib},
   bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@misc{adas_report_2023,
+  title        = {Automotive ADAS (Advanced Driver Assistance System) Market Outlook},
+  author       = {Kaitwade, Nikhil},
+  year         = 2023,
+  month        = 11,
+  howpublished = {Online},
+  url          = {https://www.futuremarketinsights.com/reports/adas-market},
+  note         = {Accessed: 2024-06-06}
 }
