--- a/main.tex
+++ b/main.tex
@@ -59,11 +59,23 @@
 % list of acronyms
 \acrodef{adas}[ADAS]{Advanced Driver Assistance Systems}
 \acrodef{who}[WHO]{World Health Organization}
+\acrodef{cagr}[CAGR]{Compound Annual Growth Rate}
+\acrodef{oems}[OEMs]{Original Equipment Manufacturers}
+\acrodef{acc}[ACC]{Adaptive Cruise Control}
+\acrodef{lka}[LKA]{Lane Keeping Assistance}
+\acrodef{ldw}[LDW]{Lane Departure Warning}
+\acrodef{aeb}[AEB]{Automatic Emergency Braking}
+\acrodef{bsd}[BSD]{Blind Spot Detection}
+\acrodef{tsr}[TSR]{Traffic Sign Recognition}
+\acrodef{dms}[DMS]{Driver Monitoring System}
 
 
 \begin{document}
 \pagenumbering{roman}
 \loadgeometry{coverpage}
+
+% \include{chapters/comments/comments.tex}
+
 \include{chapters/0_cover/cover.tex}
 \loadgeometry{origin}
 \include{chapters/0_acknowls/acknowls.tex}
@@ -74,7 +86,7 @@
 %
 \include{chapters/2_related_work/related_work.tex}
 %
-% \include{chapters/3_background/background.tex}
+\include{chapters/3_background/background.tex}
 %
 \include{chapters/4_methods/methods.tex}
 %
