--- a/bibliography/bibliography.bib
+++ b/bibliography/bibliography.bib
@@ -1,10 +1,3 @@
-@article{key,
-    author={Doe, John and Doe, Jane},
-    title={A super interesting Article},
-    year={2015},
-    Journal={Journal of unreproducible Results},    
-}
-
 @misc{coco,
       title={Microsoft COCO: Common Objects in Context}, 
       author={Tsung-Yi Lin and Michael Maire and Serge Belongie and Lubomir Bourdev and Ross Girshick and James Hays and Pietro Perona and Deva Ramanan and C. Lawrence Zitnick and Piotr Dollár},
@@ -379,6 +372,15 @@ DOI = {10.3390/electronics11010076}
       author={Mathilde Caron and Hugo Touvron and Ishan Misra and Hervé Jégou and Julien Mairal and Piotr Bojanowski and Armand Joulin},
       year={2021},
       eprint={2104.14294},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
+
+@misc{retinanet,
+      title={Focal Loss for Dense Object Detection}, 
+      author={Tsung-Yi Lin and Priya Goyal and Ross Girshick and Kaiming He and Piotr Dollár},
+      year={2018},
+      eprint={1708.02002},
       archivePrefix={arXiv},
       primaryClass={cs.CV}
 }
