Added training table on Dreyeve.

--- a/main.tex
+++ b/main.tex
@@ -19,6 +19,10 @@
 \usepackage{amsfonts}
 \usepackage{subcaption}
 \usepackage{color,soul}
+\usepackage{rotating}
+\usepackage{multirow}
+\usepackage{siunitx}
+\sisetup{scientific-notation=true, output-exponent-marker=\ensuremath{\mathrm{E}}}
 
 \newcommand\blankpage{%
     \null
