Updated description of dreyeve training.

--- a/main.tex
+++ b/main.tex
@@ -74,6 +74,14 @@
 \acrodef{bsd}[BSD]{Blind Spot Detection}
 \acrodef{tsr}[TSR]{Traffic Sign Recognition}
 \acrodef{dms}[DMS]{Driver Monitoring System}
+\acrodef{mpl}[MPL]{Meta Pseudo Labels}
+\acrodef{vit}[ViT]{Vision Transformer}
+\acrodef{cnn}[CNN]{Convolutional Neural Network}
+\acrodef{rnn}[RNN]{Recurrent Neural Network}
+\acrodef{lstm}[LSTM]{Long Short-Term Memory}
+\acrodef{gru}[GRU]{Gated Recurrent Unit}
+\acrodef{mlp}[MLP]{Multi-Layer Perceptron}
+
 
 
 \begin{document}
