--- a/main.tex
+++ b/main.tex
@@ -106,7 +106,7 @@
 %
 \include{chapters/5_experiments/experiments.tex}
 %
-\include{chapters/6_discussion/discussion.tex}
+% \include{chapters/6_discussion/discussion.tex}
 %
 \include{chapters/7_conclusion/conclusion.tex}
 %
