Updated lists of figures and tables.

--- a/main.tex
+++ b/main.tex
@@ -95,7 +95,8 @@
 \include{chapters/0_acknowls/acknowls.tex}
 \include{chapters/0_abstract/abstract.tex}
 \tableofcontents
-% \listoffigures
+\listoffigures
+\listoftables
 \include{chapters/1_introduction/introduction.tex}
 %
 \include{chapters/2_related_work/related_work.tex}
