--- a/bibliography/bibliography.bib
+++ b/bibliography/bibliography.bib
@@ -384,3 +384,23 @@ DOI = {10.3390/electronics11010076}
       archivePrefix={arXiv},
       primaryClass={cs.CV}
 }
+
+@article{dota_dataset,
+  author       = {Yu Yao and
+                  Xizi Wang and
+                  Mingze Xu and
+                  Zelin Pu and
+                  Ella M. Atkins and
+                  David J. Crandall},
+  title        = {When, Where, and What? {A} New Dataset for Anomaly Detection in Driving
+                  Videos},
+  journal      = {CoRR},
+  volume       = {abs/2004.03044},
+  year         = {2020},
+  url          = {https://arxiv.org/abs/2004.03044},
+  eprinttype    = {arXiv},
+  eprint       = {2004.03044},
+  timestamp    = {Wed, 08 Apr 2020 17:08:25 +0200},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-2004-03044.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
