--- a/main.tex
+++ b/main.tex
@@ -81,6 +81,7 @@
 \acrodef{lstm}[LSTM]{Long Short-Term Memory}
 \acrodef{gru}[GRU]{Gated Recurrent Unit}
 \acrodef{mlp}[MLP]{Multi-Layer Perceptron}
+\acrodef{vad}[VAD]{Video Anomaly Detection}
 
 
 
