Updated related work.

--- a/bibliography/bibliography.bib
+++ b/bibliography/bibliography.bib
@@ -404,3 +404,155 @@ DOI = {10.3390/electronics11010076}
   biburl       = {https://dblp.org/rec/journals/corr/abs-2004-03044.bib},
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
+
+@ARTICLE{anomaly_detection_crowded_scenes,
+  author={Li, Weixin and Mahadevan, Vijay and Vasconcelos, Nuno},
+  journal={IEEE Transactions on Pattern Analysis and Machine Intelligence}, 
+  title={Anomaly Detection and Localization in Crowded Scenes}, 
+  year={2014},
+  volume={36},
+  number={1},
+  pages={18-32},
+  keywords={Hidden Markov models;Computer vision;Image motion analysis;Computational modeling;Detectors;Feature extraction;Principal component analysis;Video analysis;surveillance;anomaly detection;crowded scene;dynamic texture;center-surround saliency},
+  doi={10.1109/TPAMI.2013.111}}
+
+@INPROCEEDINGS{avenue,
+  author={Lu, Cewu and Shi, Jianping and Jia, Jiaya},
+  booktitle={2013 IEEE International Conference on Computer Vision}, 
+  title={Abnormal Event Detection at 150 FPS in MATLAB}, 
+  year={2013},
+  volume={},
+  number={},
+  pages={2720-2727},
+  keywords={Silicon;Videos;Testing;Training;Surveillance;Training data;MATLAB;abnormal event detection;real-time;surveillance video;dictionary learning},
+  doi={10.1109/ICCV.2013.338}}
+
+  @article{shanghaitech_dataset,
+  author       = {Wen Liu and
+                  Weixin Luo and
+                  Dongze Lian and
+                  Shenghua Gao},
+  title        = {Future Frame Prediction for Anomaly Detection - {A} New Baseline},
+  journal      = {CoRR},
+  volume       = {abs/1712.09867},
+  year         = {2017},
+  url          = {http://arxiv.org/abs/1712.09867},
+  eprinttype    = {arXiv},
+  eprint       = {1712.09867},
+  timestamp    = {Thu, 03 Sep 2020 16:02:24 +0200},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-1712-09867.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{ucf_crime,
+  author       = {Waqas Sultani and
+                  Chen Chen and
+                  Mubarak Shah},
+  title        = {Real-world Anomaly Detection in Surveillance Videos},
+  journal      = {CoRR},
+  volume       = {abs/1801.04264},
+  year         = {2018},
+  url          = {http://arxiv.org/abs/1801.04264},
+  eprinttype    = {arXiv},
+  eprint       = {1801.04264},
+  timestamp    = {Tue, 14 May 2019 16:43:31 +0200},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-1801-04264.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{anticip_accident_dashcam,
+  author       = {Fu-Hsiang Chan and
+                  Yu-Ting Chen and
+                  Yu Xiang and
+                  Min Sun},
+  title        = {Anticipating Accidents in Dashcam Videos},
+  booktitle    = {Computer Vision -- ACCV 2016},
+  year         = {2017},
+  publisher    = {Springer International Publishing},
+  address      = {Cham},
+  pages        = {136--153},
+  isbn         = {978-3-319-54190-7},
+  editor       = {Shang-Hong Lai and
+                  Vincent Lepetit and
+                  Ko Nishino and
+                  Yoichi Sato},
+  timestamp    = {Tue, 14 May 2019 16:43:31 +0200},
+  biburl       = {https://dblp.org/rec/conf/accv/ChanCXS16.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{a3d,
+  author       = {Yu Yao and
+                  Mingze Xu and
+                  Yuchen Wang and
+                  David J. Crandall and
+                  Ella M. Atkins},
+  title        = {Unsupervised Traffic Accident Detection in First-Person Videos},
+  journal      = {CoRR},
+  volume       = {abs/1903.00618},
+  year         = {2019},
+  url          = {http://arxiv.org/abs/1903.00618},
+  eprinttype    = {arXiv},
+  eprint       = {1903.00618},
+  timestamp    = {Sat, 30 Mar 2019 19:27:21 +0100},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-1903-00618.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{dada1,
+  author       = {Jianwu Fang and
+                  Dingxin Yan and
+                  Jiahuan Qiao and
+                  Jianru Xue},
+  title        = {{DADA:} {A} Large-scale Benchmark and Model for Driver Attention Prediction
+                  in Accidental Scenarios},
+  journal      = {CoRR},
+  volume       = {abs/1912.12148},
+  year         = {2019},
+  url          = {http://arxiv.org/abs/1912.12148},
+  eprinttype    = {arXiv},
+  eprint       = {1912.12148},
+  timestamp    = {Fri, 03 Jan 2020 16:10:45 +0100},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-1912-12148.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{dada2,
+  author       = {Jianwu Fang and
+                  Dingxin Yan and
+                  Jiahuan Qiao and
+                  Jianru Xue and
+                  He Wang and
+                  Sen Li},
+  title        = {{DADA-2000:} Can Driving Accident be Predicted by Driver Attention?
+                  Analyzed by {A} Benchmark},
+  journal      = {CoRR},
+  volume       = {abs/1904.12634},
+  year         = {2019},
+  url          = {http://arxiv.org/abs/1904.12634},
+  eprinttype    = {arXiv},
+  eprint       = {1904.12634},
+  timestamp    = {Thu, 02 May 2019 15:13:44 +0200},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-1904-12634.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{bdd_a,
+  author       = {Ye Xia and
+                  Danqing Zhang and
+                  Alexei Pozdnoukhov and
+                  Ken Nakayama and
+                  Karl Zipser and
+                  David Whitney},
+  title        = {Training a network to attend like human drivers saves it from common
+                  but misleading loss functions},
+  journal      = {CoRR},
+  volume       = {abs/1711.06406},
+  year         = {2017},
+  url          = {http://arxiv.org/abs/1711.06406},
+  eprinttype    = {arXiv},
+  eprint       = {1711.06406},
+  timestamp    = {Fri, 01 Oct 2021 08:58:32 +0200},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-1711-06406.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
