--- a/bibliography/bibliography.bib
+++ b/bibliography/bibliography.bib
@@ -405,7 +405,7 @@ DOI = {10.3390/electronics11010076}
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
-@ARTICLE{anomaly_detection_crowded_scenes,
+@ARTICLE{ucsd,
   author={Li, Weixin and Mahadevan, Vijay and Vasconcelos, Nuno},
   journal={IEEE Transactions on Pattern Analysis and Machine Intelligence}, 
   title={Anomaly Detection and Localization in Crowded Scenes}, 
@@ -556,3 +556,56 @@ DOI = {10.3390/electronics11010076}
   biburl       = {https://dblp.org/rec/journals/corr/abs-1711-06406.bib},
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
+
+@article{hasan_convae,
+  author       = {Mahmudul Hasan and
+                  Jonghyun Choi and
+                  Jan Neumann and
+                  Amit K. Roy{-}Chowdhury and
+                  Larry S. Davis},
+  title        = {Learning Temporal Regularity in Video Sequences},
+  journal      = {CoRR},
+  volume       = {abs/1604.04574},
+  year         = {2016},
+  url          = {http://arxiv.org/abs/1604.04574},
+  eprinttype    = {arXiv},
+  eprint       = {1604.04574},
+  timestamp    = {Mon, 13 Aug 2018 16:47:36 +0200},
+  biburl       = {https://dblp.org/rec/journals/corr/0003CNRD16.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{medel_lstmconvae,
+  author       = {Yong Shean Chong and
+                  Yong Haur Tay},
+  title        = {Abnormal Event Detection in Videos using Spatiotemporal Autoencoder},
+  journal      = {CoRR},
+  volume       = {abs/1701.01546},
+  year         = {2017},
+  url          = {http://arxiv.org/abs/1701.01546},
+  eprinttype    = {arXiv},
+  eprint       = {1701.01546},
+  timestamp    = {Mon, 13 Aug 2018 16:48:06 +0200},
+  biburl       = {https://dblp.org/rec/journals/corr/ChongT17.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@INPROCEEDINGS{luo_lstmconvae,
+
+  author={Luo, Weixin and Liu, Wen and Gao, Shenghua},
+
+  booktitle={2017 IEEE International Conference on Multimedia and Expo (ICME)}, 
+
+  title={Remembering history with convolutional LSTM for anomaly detection}, 
+
+  year={2017},
+
+  volume={},
+
+  number={},
+
+  pages={439-444},
+
+  keywords={Anomaly detection;Videos;Testing;Image reconstruction;Convolution;Three-dimensional displays;Neural networks;Anomaly detection;Convolutional Neural Networks;Long Short Term Memory},
+
+  doi={10.1109/ICME.2017.8019325}}
