--- a/main.tex
+++ b/main.tex
@@ -82,7 +82,8 @@
 \acrodef{gru}[GRU]{Gated Recurrent Unit}
 \acrodef{mlp}[MLP]{Multi-Layer Perceptron}
 \acrodef{vad}[VAD]{Video Anomaly Detection}
-
+\acrodef{convae}[ConvAE]{Convolutional Autoencoder}
+\acrodef{convlstmae}[ConvLSTM-AE]{Convolutional LSTM Autoencoder}
 
 
 \begin{document}
