--- a/main.tex
+++ b/main.tex
@@ -84,6 +84,8 @@
 \acrodef{vad}[VAD]{Video Anomaly Detection}
 \acrodef{convae}[ConvAE]{Convolutional Autoencoder}
 \acrodef{convlstmae}[ConvLSTM-AE]{Convolutional LSTM Autoencoder}
+\acrodef{sift}[SIFT]{Scale-Invariant Feature Transform}
+\acrodef{ransac}[RANSAC]{Random Sample Consensus}
 
 
 \begin{document}
