--- a/bibliography/bibliography.bib
+++ b/bibliography/bibliography.bib
@@ -609,3 +609,34 @@ DOI = {10.3390/electronics11010076}
   keywords={Anomaly detection;Videos;Testing;Image reconstruction;Convolution;Three-dimensional displays;Neural networks;Anomaly detection;Convolutional Neural Networks;Long Short Term Memory},
 
   doi={10.1109/ICME.2017.8019325}}
+
+
+@article{lowe_sift,
+  author = {David G. Lowe},
+  title = {Distinctive Image Features from Scale-Invariant Keypoints},
+  journal = {International Journal of Computer Vision},
+  volume = {60},
+  number = {2},
+  pages = {91--110},
+  year = {2004},
+  month = {11},
+  abstract = {This paper presents a method for extracting distinctive invariant features from images that can be used to perform reliable matching between different views of an object or scene. The features are invariant to image scale and rotation, and are shown to provide robust matching across a substantial range of affine distortion, change in 3D viewpoint, addition of noise, and change in illumination. The features are highly distinctive, in the sense that a single feature can be correctly matched with high probability against a large database of features from many images. This paper also describes an approach to using these features for object recognition. The recognition proceeds by matching individual features to a database of features from known objects using a fast nearest-neighbor algorithm, followed by a Hough transform to identify clusters belonging to a single object, and finally performing verification through least-squares solution for consistent pose parameters. This approach to recognition can robustly identify objects among clutter and occlusion while achieving near real-time performance.},
+  issn = {1573-1405},
+  doi = {10.1023/B:VISI.0000029664.99615.94},
+  url = {https://doi.org/10.1023/B:VISI.0000029664.99615.94}
+}
+
+@incollection{ransac,
+title = {Random Sample Consensus: A Paradigm for Model Fitting with Applications to Image Analysis and Automated Cartography},
+editor = {Martin A. Fischler and Oscar Firschein},
+booktitle = {Readings in Computer Vision},
+publisher = {Morgan Kaufmann},
+address = {San Francisco (CA)},
+pages = {726-740},
+year = {1987},
+isbn = {978-0-08-051581-6},
+doi = {https://doi.org/10.1016/B978-0-08-051581-6.50070-2},
+url = {https://www.sciencedirect.com/science/article/pii/B9780080515816500702},
+author = {Martin A. Fischler and Robert C. Bolles},
+abstract = {A new paradigm, Random Sample Consensus (RANSAC), for fitting a model to experimental data is introduced, RANSAC is capable of interpreting/ smoothing data containing a significant percentage of gross errors, and is thus ideally suited for applications in automated image analysis where interpretation is based on the data provided by error-prone feature detectors. A major portion of this paper describes the application of RANSAC to the Location Determination Problem (LDP): Given an image depicting a set of landmarks with known locations, determine that point in space from which the image was obtained. In response to a RANSAC requirement, new results are derived on the minimum number of landmarks needed to obtain a solution, and algorithms are presented for computing these minimum-landmark solutions in closed form. These results provide the basis for an automatic system that can solve the LDP under difficult viewing and analysis conditions. Implementation details and computational examples are also presented.}
+}
